// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WuiCardSelect is rendered 1`] = `
<button
  aria-checked="false"
  aria-label="aria-label"
  class="wuiButtonEmpty wuiButtonEmpty--text wuiButtonEmpty--xSmall wuiCardSelect wuiCardSelect--text testClass1 testClass2"
  data-test-subj="test subject string"
  role="switch"
  type="button"
>
  <span
    class="wuiButtonContent wuiButtonEmpty__content"
  >
    <span
      class="wuiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`WuiCardSelect props can override color 1`] = `
<button
  aria-checked="false"
  class="wuiButtonEmpty wuiButtonEmpty--danger wuiButtonEmpty--xSmall wuiCardSelect wuiCardSelect--danger"
  role="switch"
  type="button"
>
  <span
    class="wuiButtonContent wuiButtonEmpty__content"
  >
    <span
      class="wuiButtonEmpty__text"
    >
      Select
    </span>
  </span>
</button>
`;

exports[`WuiCardSelect props can override text 1`] = `
<button
  aria-checked="false"
  class="wuiButtonEmpty wuiButtonEmpty--text wuiButtonEmpty--xSmall wuiCardSelect wuiCardSelect--text"
  role="switch"
  type="button"
>
  <span
    class="wuiButtonContent wuiButtonEmpty__content"
  >
    <span
      class="wuiButtonEmpty__text"
    >
      Custom text
    </span>
  </span>
</button>
`;

exports[`WuiCardSelect props isDisabled 1`] = `
<button
  aria-checked="false"
  class="wuiButtonEmpty wuiButtonEmpty--text wuiButtonEmpty--xSmall wuiButtonEmpty-isDisabled wuiCardSelect wuiCardSelect--text"
  disabled=""
  role="switch"
  type="button"
>
  <span
    class="wuiButtonContent wuiButtonEmpty__content"
  >
    <span
      class="wuiButtonEmpty__text"
    >
      Unavailable
    </span>
  </span>
</button>
`;

exports[`WuiCardSelect props isSelected 1`] = `
<button
  aria-checked="true"
  class="wuiButtonEmpty wuiButtonEmpty--text wuiButtonEmpty--xSmall wuiCardSelect wuiCardSelect--success"
  role="switch"
  type="button"
>
  <span
    class="wuiButtonContent wuiButtonEmpty__content"
  >
    <div
      class="wuiButtonContent__icon"
      data-wuiicon-type="check"
    />
    <span
      class="wuiButtonEmpty__text"
    >
      Selected
    </span>
  </span>
</button>
`;
